folder change: modules-custom to custom-modules

--- a/Apps/CaloomMVC/caloomhtml/UI/docs/agi_index.phtml
+++ b/Apps/CaloomMVC/caloomhtml/UI/docs/agi_index.phtml
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<?php include 'modules-custom/head.txt' ?>
+<?php include 'custom-modules/head.txt' ?>
 <body data-spy="scroll" data-target=".subnav" data-offset="50" style="background-image:none">
 
 <!-- navbar-navbar-fixed-top -->
-<?php include'modules-custom/navbar-fixed-top.txt' ?><!-- /navbar-navbar-fixed-top -->
+<?php include'custom-modules/navbar-fixed-top.txt' ?><!-- /navbar-navbar-fixed-top -->
 <!-- subnav-fixed -->
-<?php include 'modules-custom/subnav-fixed.txt' ?><!-- /subnav-fixed -->
+<?php include 'custom-modules/subnav-fixed.txt' ?><!-- /subnav-fixed -->
 
 <!-- container -->
 <div class="container">
@@ -17,13 +17,13 @@
 <!-- row-fluid -->	
 <div class="row-fluid">
 <!-- span9 map -->	
-<?php include 'modules-custom/map.txt' ?><!-- /span9 map -->
+<?php include 'custom-modules/map.txt' ?><!-- /span9 map -->
 <!-- span3 result-list -->	
-<?php include 'modules-custom/result-list.txt' ?><!-- /span3 result-list -->
+<?php include 'custom-modules/result-list.txt' ?><!-- /span3 result-list -->
 </div><!-- /row-fluid -->
 <div class="row-fluid">
 <!-- followed -->
-<?php include 'modules-custom/followed.txt' ?><!-- /followed -->
+<?php include 'custom-modules/followed.txt' ?><!-- /followed -->
 </div>
 
 </div><!-- /container-fluid -->	
@@ -31,18 +31,18 @@
 <hr class="soften" id="about">
 
 <!-- explanation -->
-<?php include 'modules-custom/explanation.txt' ?><!-- /explanation -->
+<?php include 'custom-modules/explanation.txt' ?><!-- /explanation -->
 
 <!-- Footer -->
-<?php include 'modules-custom/footer.txt' ?><!-- /Footer -->
+<?php include 'custom-modules/footer.txt' ?><!-- /Footer -->
 
 </div><!-- /container -->
 
 <!--Modals-->
-<?php include 'modules-custom/modals.txt' ?><!--/Modals-->
+<?php include 'custom-modules/modals.txt' ?><!--/Modals-->
 
 <!-- Le javascript -->
-<?php include 'modules-custom/le-javascript.txt' ?><!-- Le javascript -->
+<?php include 'custom-modules/le-javascript.txt' ?><!-- Le javascript -->
 
 </body>
 </html>
