--- a/Apps/CaloomMVC/caloomhtml/UI/docs/default-layouts/default-map-list.phtml
+++ b/Apps/CaloomMVC/caloomhtml/UI/docs/default-layouts/default-map-list.phtml
@@ -8,8 +8,11 @@
 <!-- default-navbar.txt -->
 <?php include'default-navbar.txt' ?><!-- default-navbar.txt -->
 
-<div class="container"><!--the container class sets the width of the container and centers it -->
+<!--the container class sets the width of the container and centers it -->
+<div class="container">
+<!-- section -->
 <section id="gridSystem">
+<!-- row -->
 <div class="row">
 <?php include'../default-modules/default-map.txt' ?>
 <?php include'../default-modules/default-result-list.txt' ?>
