--- a/Apps/CaloomPHP/caloomhtml/UI/docs/default-pages/overview-w5.phtml
+++ b/Apps/CaloomPHP/caloomhtml/UI/docs/default-pages/overview-w5.phtml
@@ -6,116 +6,120 @@
 <body data-spy="scroll" data-target=".subnav" data-offset="50">
 
 <!-- default-navbar.txt -->
-<?php include '../default-layouts/default-navbar.txt' ?><!-- default-navbar.txt -->
+ <?php include '../default-layouts/default-navbar.txt' ?><!-- default-navbar.txt -->
 
 
 <div class="container"><!--the container class sets the width of the container and centers it -->
 
 
 <section id="forms">
-	<div class="page-header">
-		<h1>W5 Forms</h1>
-	</div>
+ <div class="page-header">
+  <h1>W5 Forms</h1>
+ </div>
 
 <h2>Default W5 forms <small>these forms are for adding a product to the system</small></h2>
 <div class="row">
-<div class="span6">
-<form class="form-horizontal well">
-<div class="accordion" id="accordion1">
-				
-<div class="accordion-group">
-	<div class="accordion-heading">
-		<H3>
-			<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion1" href="#collapseOne">
-				What
-			</a>
-		</H3>
-	</div><!--/accordion-heading-->
-	<div id="collapseOne" class="accordion-body collapse in">
-		<div class="accordion-inner">
-			<div class="control-group">
-				<?php include'../default-modules/default-w5-what.txt' ?>
-			</div><!--control-group-->
-		</div><!--/accordion-inner-->
-	</div><!--/collapseOne-->
-</div><!--/accordion-group-->
+ <div class="span6">
+  <form class="form-horizontal well">
+	
+   <div class="accordion" id="accordion1">
 
-<div class="accordion-group">
-	<div class="accordion-heading">
-		<h3><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion1" href="#collapseTwo">
-			Where
-		</a></h3>
-	</div><!--/accordion-heading-->
-	<div id="collapseTwo" class="accordion-body collapse">
-		<div class="accordion-inner">
-			<div class="control-group">
-				<?php include'../default-modules/default-w5-where.txt' ?>
-			</div><!--control-group-->
-		</div><!--/accordion-inner-->
-	</div><!--/collapseTwo-->
-</div><!--/accordion-group-->
+<!--accordion-group-what-->
+    <div class="accordion-group">
+     <div class="accordion-heading">
+      <H3><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion1" href="#collapseOne">
+       What
+      </a></H3>
+     </div>
+     <div id="collapseOne" class="accordion-body collapse in">
+      <div class="accordion-inner">
+       <?php include'../default-modules/default-w5-what.txt' ?>
+      </div>
+     </div>
+    </div>
+<!--/accordion-group-what-->
 
-<div class="accordion-group">
-	<div class="accordion-heading">
-		<h3><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion1" href="#collapseThree">
-			When
-		</a></h3>
-	</div><!--/accordion-heading-->
-	<div id="collapseThree" class="accordion-body collapse">
-		<div class="accordion-inner">
-			<div class="control-group">
-				<?php include'../default-modules/default-w5-when.txt' ?>
-			</div><!--control-group-->
-		</div><!--/accordion-inner-->
-	</div><!--/collapseThree-->
-</div><!--/accordion-group-->
+<!--accordion-group-where-->
+    <div class="accordion-group">
+     <div class="accordion-heading">
+      <h3><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion1" href="#collapseTwo">
+       Where
+      </a></h3>
+     </div>
+     <div id="collapseTwo" class="accordion-body collapse">
+      <div class="accordion-inner">
+       <?php include'../default-modules/default-w5-where.txt' ?>
+      </div>
+     </div><!--/collapseTwo-->
+    </div>
+<!--/accordion-group-where-->
 
-<div class="accordion-group">
-	<div class="accordion-heading">
-		<h3><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion1" href="#collapseFour">
-			Whom
-		</a></h3>
-	</div><!--/accordion-heading-->
-	<div id="collapseFour" class="accordion-body collapse">
-		<div class="accordion-inner">
-			<div class="control-group">
-				<?php include'../default-modules/default-w5-whom.txt' ?>
-			</div><!--control-group-->
-		</div><!--/accordion-inner-->
-	</div><!--/collapseFour-->
-</div><!--/accordion-group-->
+<!--accordion-group-when-->
+    <div class="accordion-group">
+     <div class="accordion-heading">
+      <h3><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion1" href="#collapseThree">
+       When
+      </a></h3>
+     </div>
+     <div id="collapseThree" class="accordion-body collapse">
+      <div class="accordion-inner">
+       <?php include'../default-modules/default-w5-when.txt' ?>
+      </div>
+     </div>
+    </div>
+<!--accordion-group-when-->
 
-<div class="accordion-group">
-	<div class="accordion-heading">
-		<h3><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion1" href="#collapseFive">
-			Where
-		</a></h3>
-	</div><!--/accordion-heading-->
-	<div id="collapseFive" class="accordion-body collapse">
-		<div class="accordion-inner">
-			<div class="control-group">
-				<?php include'../default-modules/default-w5-where.txt' ?>
-			</div><!--control-group-->
-		</div><!--/accordion-inner-->
-	</div><!--/collapseFive-->
-</div><!--/accordion-group-->
-<div class="form-actions">
-	<button type="submit" class="btn btn-primary">Save changes</button>
-	<button class="btn">Cancel</button>
-</div><!--/form-actions-->
-</div><!--/accordion-->
-</form><!--form-horizontal well-->
-</div><!--/span6 -->
+<!--accordion-group-whom-->
+    <div class="accordion-group">
+     <div class="accordion-heading">
+      <h3><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion1" href="#collapseFour">
+       Whom
+      </a></h3>
+     </div>
+     <div id="collapseFour" class="accordion-body collapse">
+      <div class="accordion-inner">
+       <?php include'../default-modules/default-w5-whom.txt' ?>
+      </div>
+     </div>
+    </div>
+<!--/accordion-group-whom-->
+
+<!--accordion-group-worth-->
+    <div class="accordion-group">
+     <div class="accordion-heading">
+      <h3><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion1" href="#collapseFive">
+       Worth
+      </a></h3>
+     </div>
+     <div id="collapseFive" class="accordion-body collapse">
+      <div class="accordion-inner">
+       <?php include'../default-modules/default-w5-worth.txt' ?>
+      </div>
+     </div>
+    </div>
+<!--/accordion-group-worth-->
+
+<!--form-actions-->
+    <div class="form-actions">
+     <button type="submit" class="btn btn-primary">Save changes</button>
+     <button class="btn">Cancel</button>
+    </div>
+<!--/form-actions-->
+
+   </div><!--/accordion-->
+
+  </form>
+ </div><!--/span6 -->
 </div><!--/row -->
 </section><!--/forms-->
 
 
 <!-- default-footer.txt -->
-<?php include '../default-layouts/default-footer.txt' ?><!-- default-footer.txt-->
+ <?php include '../default-layouts/default-footer.txt' ?><!-- default-footer.txt-->
 </div><!-- /container -->
 
 <!-- Le javascript -->
-<?php include '../default-modules/default-le-javascript.txt' ?><!-- Le javascript -->
+ <?php include '../default-modules/default-le-javascript.txt' ?><!-- Le javascript -->
 
 </body>
 </html>
